Fixing bug 300868. The 'target' attribute is not supported on SVG's <a> element. r=bugmail@sicking.cc, sr=jst@mozilla.org